@@ -1,3 +1,7 @@
+2006-07-16  Ales Hakl  <ales at hakl dot net>
+
+	* src/hash.c (dfsch_hash_2_alist): alist->hash
+
 2006-07-15  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch_exception_write): Better stacktraces
